cambios agregados en html sitio de preguntas

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es el sitio web sigueme en twitter 
-        si tienes dudas pregunta
+        Hola amigos y amigas este es el sitio web sigueme en twitter 
+        si tienes dudas preguntas preguntame 
     </p>
 </body>
 </html>
